--- a/src/styles/tutorial.css
+++ b/src/styles/tutorial.css
@@ -47,6 +47,7 @@
     padding: 5px;
     font-family: 'Menlo';
     color: white;
+    border-radius: var(--code-block-border-radius);
 }
 
 #tutorial pre {
